@@ -943,7 +943,7 @@ static NSString * const GSSOCKSAckConn = @"GSSOCKSAckConn";
   if (conf != nil)
     {
       GSSOCKS           *h;
-      struct sockaddr   *sa = [i _address];
+      struct sockaddr_storage   *sa = [i _address];
       NSString          *v;
       BOOL              i6 = NO;
 
@@ -958,15 +958,15 @@ static NSString * const GSSOCKSAckConn = @"GSSOCKSAckConn";
         }
 
 #if     defined(AF_INET6)
-      if (sa->sa_family == AF_INET6)
+      if (sa->ss_family == AF_INET6)
         {
           i6 = YES;
         }
       else
 #endif
-      if (sa->sa_family != AF_INET)
+      if (sa->ss_family != AF_INET)
         {
-          GSOnceMLog(@"SOCKS not supported for socket type %d", sa->sa_family);
+          GSOnceMLog(@"SOCKS not supported for socket type %d", sa->ss_family);
           return;
         }
 
@@ -1563,12 +1563,12 @@ setNonBlocking(SOCKET fd)
 #endif
       _sock = INVALID_SOCKET;
       _handler = nil;
-      _address.s.sa_family = AF_UNSPEC;
+      _address.s.ss_family = AF_UNSPEC;
     }
   return self;
 }
 
-- (struct sockaddr*) _address
+- (struct sockaddr_storage*) _address
 {
   return &_address.s;
 }
@@ -1577,7 +1577,7 @@ setNonBlocking(SOCKET fd)
 {
   id	result = [super propertyForKey: key];
 
-  if (result == nil && _address.s.sa_family != AF_UNSPEC)
+  if (result == nil && _address.s.ss_family != AF_UNSPEC)
     {
       SOCKET    	s = [self _sock];
       sockaddr_any	sin;
@@ -1693,7 +1693,7 @@ setNonBlocking(SOCKET fd)
             }
           else
             {
-              [self _setAddress: (struct sockaddr*)&peer];
+              [self _setAddress: (struct sockaddr_storage*)&peer];
               return YES;
             }
         }
@@ -1715,7 +1715,7 @@ setNonBlocking(SOCKET fd)
 	  else
 	    {
 	      strncpy(peer.sun_path, c_addr, sizeof(peer.sun_path)-1);
-	      [self _setAddress: (struct sockaddr*)&peer];
+	      [self _setAddress: (struct sockaddr_storage*)&peer];
 	      return YES;
 	    }
 	}
@@ -1726,7 +1726,7 @@ setNonBlocking(SOCKET fd)
     }
 }
 
-- (void) _setAddress: (struct sockaddr*)address
+- (void) _setAddress: (struct sockaddr_storage*)address
 {
   memcpy(&_address.s, address, GSPrivateSockaddrLength(address));
 }
@@ -1831,7 +1831,7 @@ setNonBlocking(SOCKET fd)
             {
               [GSSOCKS tryInput: self output: _sibling];
             }
-          s = socket(_address.s.sa_family, SOCK_STREAM, 0);
+          s = socket(_address.s.ss_family, SOCK_STREAM, 0);
           if (BADSOCKET(s))
             {
               [self _recordError];
@@ -1849,7 +1849,7 @@ setNonBlocking(SOCKET fd)
           [GSTLSHandler tryInput: self output: _sibling];
         }
 
-      result = connect([self _sock], &_address.s,
+      result = connect([self _sock], (struct sockaddr*)&_address.s,
         GSPrivateSockaddrLength(&_address.s));
       if (socketError(result))
         {
@@ -2352,7 +2352,7 @@ setNonBlocking(SOCKET fd)
             {
               [GSSOCKS tryInput: _sibling output: self];
             }
-          s = socket(_address.s.sa_family, SOCK_STREAM, 0);
+          s = socket(_address.s.ss_family, SOCK_STREAM, 0);
           if (BADSOCKET(s))
             {
               [self _recordError];
@@ -2370,7 +2370,7 @@ setNonBlocking(SOCKET fd)
           [GSTLSHandler tryInput: _sibling output: self];
         }
 
-      result = connect([self _sock], &_address.s,
+      result = connect([self _sock], (struct sockaddr*)&_address.s,
         GSPrivateSockaddrLength(&_address.s));
       if (socketError(result))
         {
@@ -2756,7 +2756,7 @@ setNonBlocking(SOCKET fd)
       return;
     }
 
-  s = socket(_address.s.sa_family, SOCK_STREAM, 0);
+  s = socket(_address.s.ss_family, SOCK_STREAM, 0);
   if (BADSOCKET(s))
     {
       [self _recordError];
@@ -2769,9 +2769,9 @@ setNonBlocking(SOCKET fd)
     }
 
 #ifndef	BROKEN_SO_REUSEADDR
-  if (_address.s.sa_family == AF_INET
+  if (_address.s.ss_family == AF_INET
 #ifdef  AF_INET6
-    || _address.s.sa_family == AF_INET6
+    || _address.s.ss_family == AF_INET6
 #endif
   )
     {
@@ -2792,7 +2792,7 @@ setNonBlocking(SOCKET fd)
 #endif
 
   bindReturn = bind([self _sock],
-    &_address.s, GSPrivateSockaddrLength(&_address.s));
+    (struct sockaddr*)&_address.s, GSPrivateSockaddrLength(&_address.s));
   if (socketError(bindReturn))
     {
       [self _recordError];
@@ -2854,11 +2854,11 @@ setNonBlocking(SOCKET fd)
   struct {
     uint8_t bytes[BUFSIZ];
   } __attribute__((aligned(2)))buf;
-  struct sockaddr       *addr = (struct sockaddr*)&buf;
+  struct sockaddr_storage       *addr = (struct sockaddr_storage*)&buf;
   socklen_t		len = sizeof(buf);
   int			acceptReturn;
 
-  acceptReturn = accept([self _sock], addr, (OPTLEN*)&len);
+  acceptReturn = accept([self _sock], (struct sockaddr*)addr, (OPTLEN*)&len);
   _events &= ~NSStreamEventHasBytesAvailable;
   if (socketError(acceptReturn))
     { // test for real error
