@@ -1,3 +1,10 @@
+2023-10-26 Richard Frith-Macdonald <rfm@gnu.org>
+
+	* Source/NSISO8601DateFormatter.m:
+	* Tests/base/NSDateFormatter/NSISO8601DateFormatter.m:
+	Add a couple of testcases, tidy up source code formatting, and make
+	fix for github issue #339 as suggested by kevinpeizner
+
 2023-10-10 Richard Frith-Macdonald <rfm@gnu.org>
 
 	* Source/GSPrivate.h: New method to set up system error information.
